--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "acorn": "^7.1.0",
+    "angular-in-memory-web-api": "^0.9.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
